# lxqt-panel

./: CMakeLists.txt
panel/: Activator.cpp  CMakeLists.txt  config.in  descriptor.in  lxqtpanel.cpp  moonlightpanelmodule.cpp  moonlightpanelmodule.h
plugin-tray/: lxqttray.cpp  trayicon.cpp
